macOS: Attempt to fix RuneLite building
This fixes patching when running the Mac .app through the inclusion of jdk.jartool into the bundled JRE